fix joomla img on tablet

--- a/css/codeception.css
+++ b/css/codeception.css
@@ -1426,3 +1426,10 @@ body #footer .links {
 .team:hover {
 	text-decoration: none;
 }
+
+@media only screen and (min-width : 768px) and (max-width : 991px) {
+	.item--joomla img {
+		width: 180px;
+		height: 150px;
+	}
+}
